--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>CSE116.io</title>
-    <script type = "text/JavaScript" src = "js/LoginPage.js"></script>
+    <script type = "text/JavaScript" src = "JavaScript/Circles.js"></script>
+
+    <script type = "text/JavaScript" src = "JavaScript/GameSetUp.js.js"></script>
+    <link rel="stylesheet" href="CSS/main.css">
+
 </head>
 
 <body>
-<h1>Welcome to CSE116.io</h1>
-<p>This is a clone of the of the popular game, Agar.io</p>
+<h1>CSE116.io</h1>
 <h2>Login:</h2>
 <input type = "text" id = "username"><br/>
-<input type= "button" value = "Join Game" onclick="Clicked()">
+<input type= "button" value = "Join Game" onclick="Clicked()"><br/>
+<div>
+    <h1>Welcome to the Game </h1>
 
 
+
+</div>
+
+
+<canvas id = "myCanvas" width ="300" height = "300" style="border:1px solid #030000;"</canvas
 
 
 
