--- a/src/Frontend/HTML/index.html
+++ b/src/Frontend/HTML/index.html
@@ -6,7 +6,7 @@
     <script type = "text/JavaScript" src = "JavaScript/Circles.js"></script>
 
     <script type = "text/JavaScript" src = "JavaScript/GameSetUp.js.js"></script>
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="../CSS/main.css">
 
 </head>
 
