--- a/src/Frontend/HTML/index.html
+++ b/src/Frontend/HTML/index.html
@@ -11,6 +11,8 @@
 <h1>CSE116.io</h1>
 <div>
     <h1>Welcome to the Game </h1>
+    <h2>Choose Your Color</h2>
+    <a href = "customizer.html"><input type = button value="Customizer" onclick=""></a>
 
 </div>
 
