--- a/src/Frontend/HTML/credits.html
+++ b/src/Frontend/HTML/credits.html
@@ -6,6 +6,7 @@
     <title>Credits</title>
 </head>
 <body>
+<a href="index.html"><button>Back</button></a>
     <h1>This mediocre Agar.io Clone was created by:</h1>
     <h2>Jacob Burkett</h2>
     <h2>Farhat Chowdhury</h2>
