--- a/src/Frontend/HTML/index.html
+++ b/src/Frontend/HTML/index.html
@@ -11,10 +11,10 @@
 <h1>CSE116.io</h1>
 <div>
     <h1>Welcome to the Game </h1>
-    <a href = "login.html"><input type = button  value = "Login"></a>
-    <a href = "loginForm.html"><input type = button value = "Create Account"></a>
-    <a href = "customizer.html"><input type = button value="Choose Your Color"></a>
-    <a href = "credits.html"><input type = button value = "Credits"></a>
+    <a href="login.html" class="myButton">Login</a>
+    <a href = "loginForm.html"class="myButton">Create Account</a>
+    <a href = "customizer.html"class="myButton">Choose Your Color</a>
+    <a href = "credits.html"class="myButton">Credits</a>
 
 </div>
 
