customizer looks nice

--- a/src/Frontend/HTML/customizer.html
+++ b/src/Frontend/HTML/customizer.html
@@ -10,18 +10,23 @@
 <div id = "container">
     <form class ="NewUser">
         <H1>Choose Your Color!</H1>
-        <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
-            <div class="dropdown-content">
-                <a href="#">Red</a>
-                <a href="#">Green</a>
-                <a href="#">Blue</a>
-                <a href="#">Yellow</a>
-                <a href="#">Orange</a>
-                <a href="#">Purple</a>
-                <a href="#">Random</a>
-            </div>
-        </div>
+        <a href="#" class="redbtn">Red</a>
+        <a href="#" class="bluebtn">Blue</a>
+        <a href="#" class="greenbtn">Green</a>
+        <a href="#" class="yellowbtn">Yellow</a>
+        <a href="#" class="greybtn">Random</a>
+        <!--<div class="dropdown">-->
+            <!--<button class="dropbtn">Dropdown</button>-->
+            <!--<div class="dropdown-content">-->
+                <!--<a href="#">Red</a>-->
+                <!--<a href="#">Green</a>-->
+                <!--<a href="#">Blue</a>-->
+                <!--<a href="#">Yellow</a>-->
+                <!--<a href="#">Orange</a>-->
+                <!--<a href="#">Purple</a>-->
+                <!--<a href="#">Random</a>-->
+            <!--</div>-->
+        <!--</div>-->
 
     </form>
 </div>
