Simplified Gui and Classes

--- a/src/Frontend/HTML/index.html
+++ b/src/Frontend/HTML/index.html
@@ -19,7 +19,9 @@
 </div>
 
 
-<canvas id = "myCanvas" width ="300" height = "300" style="border:1px solid #030000;"/>
+<canvas id = "myCanvas" width ="300" height = "300" style="border:1px solid #030000;"
+
+/>
 
 
 
