--- a/src/agario/Frontend/HTML/login.html
+++ b/src/agario/Frontend/HTML/login.html
@@ -12,7 +12,7 @@
 <h2>Login:</h2>
 <input type = "text" placeholder="Username" id ="username"><br/>
 <input type = "password" placeholder="Password" id="password"><br/>
-<a href="index.html"><input type = "button" value = "Join Game" onclick="JoinGame()"></a>
+<a href="../../server/web/index.html"><input type = "button" value = "Join agario.Backend.Game" onclick="JoinGame()"></a>
 <a href="loginForm.html"><input type = "button" value = "New User" onclick="NewUser()"></a>
 </div>
 </div>
