--- a/src/agario/Frontend/HTML/customizer.html
+++ b/src/agario/Frontend/HTML/customizer.html
@@ -6,7 +6,7 @@
     <<link rel="stylesheet" href="../CSS/customizer.css">
 </head>
 <body>
-<a href="index.html"><button>Back</button></a>
+<a href="../../server/web/index.html"><button>Back</button></a>
 <div id = "container">
     <form class ="NewUser">
         <H1>Choose Your Color!</H1>
